Worked on the user story - As a patient, I want to be able to search for doctors based on their specialization, procedure, or treatment, so that I can find the most suitable healthcare providers. As well as view a list of doctors
