# src/main/java/grid/capstone/controller/DoctorController.java
@@ -1,11 +1,12 @@
 package grid.capstone.controller;
 
+import grid.capstone.dto.v1.DoctorDTO;
 import grid.capstone.model.Doctor;
 import grid.capstone.service.doctor.DoctorService;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.data.domain.Page;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.Optional;
 
 /**
  * @author Javaughn Stephenson
@@ -13,7 +14,7 @@ import org.springframework.web.bind.annotation.RestController;
  */
 
 @RestController
-@RequestMapping("/doctors")
+@RequestMapping("api/v1/doctors")
 public class DoctorController {
 
     private final DoctorService doctorService;
@@ -25,6 +26,19 @@ public class DoctorController {
     @GetMapping("/{doctorId}")
     public Doctor getDoctor(@PathVariable Long doctorId) {
         return doctorService.getDoctor(doctorId);
+    }
+
+    @GetMapping
+    Page<DoctorDTO> getAllDoctors(
+            @RequestParam Optional<String> specialization,
+            @RequestParam Optional<String> department,
+            @RequestParam Optional<String> name,
+            @RequestParam(defaultValue = "10") Integer size,
+            @RequestParam(defaultValue = "0") Integer page
+            ) {
+        return doctorService.getAllDoctors(
+                specialization, department, name, size, page
+        );
     }
 
 }
