# src/main/java/grid/capstone/model/Doctor.java
@@ -1,7 +1,9 @@
 package grid.capstone.model;
 
 import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
 import lombok.Data;
+import lombok.NoArgsConstructor;
 
 import java.util.List;
 
@@ -11,6 +13,8 @@ import java.util.List;
  */
 
 @Data
+@AllArgsConstructor
+@NoArgsConstructor
 @Entity
 public class Doctor {
 
@@ -20,6 +24,7 @@ public class Doctor {
     private String username;
     private String email;
     private String phoneNumber;
+    private String specialization;
     private List<String> skills;
     private String biography;
     private String department;
